[gd_scene load_steps=3 format=3 uid="uid://bl5obg1xkkkd1"]

[ext_resource type="Script" path="res://game/ui/screens/pause_screen.gd" id="1_ljr67"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e0x21"]
bg_color = Color(0.126466, 0.00103327, 0.213294, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="PauseScreen" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ljr67")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.356863, 0.00784314, 0.552941, 0.862745)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_e0x21")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
theme_type_variation = &"LargeTitleLabel"
text = "pause"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ActionsContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ResumeButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ActionsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"LargeMenuButton"
text = "Resume"

[node name="RestartButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ActionsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_type_variation = &"LargeMenuButton"
text = "Restart"

[node name="QuitButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ActionsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_type_variation = &"LargeMenuButton"
text = "Quit"

[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ActionsContainer/ResumeButton" to="." method="resume_game"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ActionsContainer/RestartButton" to="." method="restart_game"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ActionsContainer/QuitButton" to="." method="quit"]
